--- a/templates/main2.html
+++ b/templates/main2.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../static/css/main2.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
@@ -18,10 +18,13 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="center-elem">
-                    <h1>Q1 and Q2</span></h1>
-                    <h2><span id="subtext"></h2>
-                    <a href="main2.html">
-                        <button id="next" type="button"  class="btn btn-primary-outline btn-next">Q4 and Q5 ></button>
+                    <h1>Q4 and Q5</span></h1>
+                    <div class="container div-vid">
+                            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/g1qcjXkThqY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/eA5uHyQJ3Ng" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <a href="main.html">
+                        <button id="next" type="button"  class="btn btn-primary-outline btn-next">< Q1 and Q2</button>
                     </a>
     
                 </div>
@@ -37,8 +40,8 @@
                 <span id="content"></span>
             </div>
             <div class="container-fluid textbox-control">
-                <a href="charter.html" target="_blank">
-                    <button id="charter" type="button"  class="btn btn-primary-outline">Prj<br />Chrtr</button>
+                <a href="profile.html" target="_blank">
+                    <button id="charter" type="button"  class="btn btn-primary-outline">Ack<br />ldgmnt</button>
                 </a>
                 <a href="transcript.html" target="_blank">
                     <button id="transcript" type="button"  class="btn btn-primary-outline">Trnscpt</button>
@@ -62,6 +65,6 @@
             crossorigin="anonymous">
     </script>
     <script src="../static/js/typeit.min.js"></script>
-    <script src="../static/js/main.js"></script>
+    <script src="../static/js/main2.js"></script>
   </body>
 </html>
