--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,11 +18,26 @@
     <div class="container-fluid">
         <div class="container">
             <div class="center-elem">
-                <h1>Sachii</span></h1>
-                <h2><span id="subtext"></h2>
-                <a href="main.html">
-                    <button id="next" type="button"  class="btn btn-primary-outline">Next ></button>
-                </a>
+                <h1>Acknowledgement</span></h1>
+                <h2> I would like to thank the following:</h2>
+                <ul>
+                    <h3>UNIQLO</h3>
+                </ul>
+                <ul>
+                    <h3>ASUS</h3>
+                </ul>
+                <ul>
+                    <h3>Bench Fix for my hair and make-up</h3>
+                </ul>
+                <ul>
+                    <h3>Hen Lin</h3>
+                </ul>
+                <ul>
+                   <h3>Mr. Greg Paolo Alcera</h3> 
+                </ul>
+                <ul>
+                    <h3>De La Salle Univeristy - Manila</h3>
+                </ul>
 
             </div>
 
