Fixed linking for web

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
             <div class="center-elem">
                 <h1>Sachii</span></h1>
                 <h2><span id="subtext"></h2>
-                <a href="main.html">
+                <a href="main">
                     <button id="next" type="button"  class="btn btn-primary-outline">Next ></button>
                 </a>
 
