--- a/templates/main.html
+++ b/templates/main.html
@@ -37,10 +37,10 @@
                 <span id="content"></span>
             </div>
             <div class="container-fluid textbox-control">
-                <a href="charter.html" target="_blank">
+                <a href="charter" target="_blank">
                     <button id="charter" type="button"  class="btn btn-primary-outline">Prj<br />Chrtr</button>
                 </a>
-                <a href="transcript.html" target="_blank">
+                <a href="transcript" target="_blank">
                     <button id="transcript" type="button"  class="btn btn-primary-outline">Trnscpt</button>
                 </a>
                 
