--- a/templates/main2.html
+++ b/templates/main2.html
@@ -23,7 +23,7 @@
                             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/g1qcjXkThqY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/eA5uHyQJ3Ng" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
-                    <a href="main.html">
+                    <a href="main">
                         <button id="next" type="button"  class="btn btn-primary-outline btn-next">< Q1 and Q2</button>
                     </a>
     
@@ -40,10 +40,10 @@
                 <span id="content"></span>
             </div>
             <div class="container-fluid textbox-control">
-                <a href="profile.html" target="_blank">
+                <a href="profile" target="_blank">
                     <button id="charter" type="button"  class="btn btn-primary-outline">Ack<br />ldgmnt</button>
                 </a>
-                <a href="transcript.html" target="_blank">
+                <a href="transcript" target="_blank">
                     <button id="transcript" type="button"  class="btn btn-primary-outline">Trnscpt</button>
                 </a>
                 
