--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
                 <div class="center-elem">
                     <h1>Q1 and Q2</span></h1>
                     <h2><span id="subtext"></h2>
-                    <a href="main2.html">
+                    <a href="main2">
                         <button id="next" type="button"  class="btn btn-primary-outline btn-next">Q4 and Q5 ></button>
                     </a>
     
