--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
 
-    <title>Sachii</title>
+    <title>Sachii - Q1 and Q2</title>
   </head>
   <body>
         <div class="container-fluid">
