--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
 
-    <title>Sachii</title>
+    <title>Sachii - Acknowledgements</title>
   </head>
   <body>
     <div class="container-fluid">
