--- a/templates/main2.html
+++ b/templates/main2.html
@@ -26,6 +26,12 @@
                     <a href="main">
                         <button id="next" type="button"  class="btn btn-primary-outline btn-next">< Q1 and Q2</button>
                     </a>
+                    <a href="profile" target="_blank">
+                        <button id="charter" type="button"  class="btn btn-primary-outline">Acknowledgement</button>
+                    </a>
+                    <a href="transcript" target="_blank">
+                        <button id="transcript" type="button"  class="btn btn-primary-outline">Dialogue Transcript</button>
+                    </a>
     
                 </div>
     
@@ -40,12 +46,6 @@
                 <span id="content"></span>
             </div>
             <div class="container-fluid textbox-control">
-                <a href="profile" target="_blank">
-                    <button id="charter" type="button"  class="btn btn-primary-outline">Ack<br />ldgmnt</button>
-                </a>
-                <a href="transcript" target="_blank">
-                    <button id="transcript" type="button"  class="btn btn-primary-outline">Trnscpt</button>
-                </a>
                 
                 
             </div>
