--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,12 @@
                     <a href="main2">
                         <button id="next" type="button"  class="btn btn-primary-outline btn-next">Q4 and Q5 ></button>
                     </a>
-    
+                    <a href="charter" target="_blank">
+                        <button id="charter" type="button"  class="btn btn-primary-outline">Project Charter</button>
+                    </a>
+                    <a href="transcript" target="_blank">
+                        <button id="transcript" type="button"  class="btn btn-primary-outline">Dialogue Transcript</button>
+                    </a>
                 </div>
     
             </div>
@@ -35,16 +40,6 @@
             </div>
             <div class="container textbox-content">
                 <span id="content"></span>
-            </div>
-            <div class="container-fluid textbox-control">
-                <a href="charter" target="_blank">
-                    <button id="charter" type="button"  class="btn btn-primary-outline">Prj<br />Chrtr</button>
-                </a>
-                <a href="transcript" target="_blank">
-                    <button id="transcript" type="button"  class="btn btn-primary-outline">Trnscpt</button>
-                </a>
-                
-                
             </div>
         </div>
     </div>
